<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".presentation.ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/image_view_icon_back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUsernameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textAlignment="center"
        android:textColor="@color/text_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBack"
        tools:text="Github Username" />

    <ImageView
        android:id="@+id/ivShare"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/iv_share"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@+id/tvUsernameDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvUsernameDetail" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/view_detail_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameDetail" />

    <ImageView
        android:id="@+id/ivUserDetail"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/image_view_user"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/poppins_medium"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/text_dark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/ivUserDetail"
        tools:text="Github Full Name" />

    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="6dp"
        android:drawablePadding="10dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/poppins"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/text_dark"
        app:drawableStartCompat="@drawable/ic_brief"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/tvFullName"
        tools:layout_editor_absoluteX="24dp"
        tools:text="Github Company" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="6dp"
        android:drawablePadding="10dp"
        android:ellipsize="marquee"
        android:fontFamily="@font/poppins"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/text_dark"
        app:drawableStartCompat="@drawable/ic_maps"
        app:layout_constraintEnd_toEndOf="@+id/tvCompany"
        app:layout_constraintStart_toStartOf="@+id/tvCompany"
        app:layout_constraintTop_toBottomOf="@id/tvCompany"
        tools:text="Github Location" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/tvLocation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:divider="?actionBarDivider"
            android:dividerPadding="20dp"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/follower"
                    android:textAlignment="center"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvFollower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/text_dark"
                    android:textSize="22sp"
                    tools:text="404" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/following"
                    android:textAlignment="center"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/text_dark"
                    android:textSize="22sp"
                    tools:text="404" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/repository"
                    android:textAlignment="center"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvRepository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/poppins_medium"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textColor="@color/text_dark"
                    android:textSize="22sp"
                    tools:text="404" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>